--- a/Pytorch_Learning.ipynb
+++ b/Pytorch_Learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNPQil+MyB7PjpQS1ISDbdQ"
+      "authorship_tag": "ABX9TyPL5+nkt6DrYhIitu/LOnqv"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,7 +19,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "HVWTWBAhn_0P"
       },
@@ -41,7 +41,7 @@
         "id": "DNJzMIQSoiTR",
         "outputId": "18f15f66-ee01-4a28-b400-a4cf1bae1d0c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -71,7 +71,7 @@
         "id": "uU_1w2EToqI4",
         "outputId": "efd7fa7f-76cf-411a-b1f4-04bf5797ec77"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,7 +99,7 @@
         "id": "XyNnbab4oy01",
         "outputId": "1563437b-16f4-40fc-ddfc-8d5140f4e875"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
         "id": "Se4JNLW8pC3c",
         "outputId": "8a82bb3f-2cee-47ae-ba2e-19cdecc8d9d3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -151,7 +151,7 @@
         "id": "tFeKo6gVpJ3m",
         "outputId": "8af43f65-abd4-48e8-988d-ea8f153a8069"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +178,7 @@
         "id": "mVCdUoWpErKS",
         "outputId": "d5a194a8-f43f-40dd-bab0-6fa693f8c727"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
         "id": "G0TcCUKSFBo3",
         "outputId": "cf0b6c97-4446-49ea-e9be-9b2d2b06dca3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
         "id": "Zml2YvEFFD4V",
         "outputId": "b73bffb5-c59a-4f5c-bbd1-fe1a3ccf601a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +258,7 @@
         "id": "j-j6nA7uFPW6",
         "outputId": "55d43fe5-4dac-42d7-cefa-d949d2e5b401"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -285,7 +285,7 @@
         "id": "OyGzEwZCFZ85",
         "outputId": "a9e01077-1cb3-483c-9d22-f53dae15112d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +311,7 @@
         "id": "Ci_l6VRDFtCT",
         "outputId": "2500d612-9985-4ee6-83b4-2b0fc456898a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +340,7 @@
         "id": "0J89xZEpF30W",
         "outputId": "2bc0bd81-3bad-4d95-a9cc-b5d69a6bf6ce"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +368,7 @@
         "id": "6cZX4Zl8GCMi",
         "outputId": "304281e5-ed00-49f7-bb77-18b2aab5a171"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +394,7 @@
         "id": "28JveFoIGKDP",
         "outputId": "23ddaeff-c69d-4fc6-fa47-d33a5e887482"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +421,7 @@
         "id": "HFJrWhigt18N",
         "outputId": "095da7e2-f9f9-4900-b56c-2da9400f7c00"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -451,7 +451,7 @@
         "id": "75g-WnlmvWoJ",
         "outputId": "92e7a013-9295-4e03-d61f-bec953b3cb8a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,7 +478,7 @@
         "id": "F2ojPXU1vtDv",
         "outputId": "3bb23314-2903-485d-83a9-2d2e1d0cce97"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -508,7 +508,7 @@
         "id": "uESsbkk6v59Y",
         "outputId": "c9f12ba5-5795-43a2-ab4f-65577ee19514"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +538,7 @@
         "id": "xnSrl3hQwBPk",
         "outputId": "331c1102-49db-424f-ea2a-283cb3fd3040"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +568,7 @@
         "id": "xhbcPkta1d3-",
         "outputId": "c983284d-60c3-4a95-a1e5-507dc4e4cb6f"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,12 +583,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "x = torch.tensor([[1.,2.],\n",
+        "                  [3.,4.],\n",
+        "                  [5.,6.]])\n",
+        "torch.manual_seed(42)\n",
+        "linear = torch.nn.Linear(\n",
+        "    in_features=3,\n",
+        "    out_features=6\n",
+        ")\n",
+        "\n",
+        "output = linear(x.T)\n",
+        "print(f'Input Shape: {x.shape}')\n",
+        "print(f'Output: {output}\\n,Output Shape: {output.shape}')"
+      ],
       "metadata": {
-        "id": "hoSFr3tK1msH"
+        "id": "hoSFr3tK1msH",
+        "outputId": "46ac9fbc-74c6-40bd-e3ef-adc866c5d108",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Input Shape: torch.Size([3, 2])\n",
+            "Output: tensor([[0.9332, 0.8805, 3.0149, 1.5545, 1.8186, 2.0634],\n",
+            "        [1.7186, 1.4009, 3.5818, 1.7408, 2.6017, 2.5123]],\n",
+            "       grad_fn=<AddmmBackward0>)\n",
+            ",Output Shape: torch.Size([2, 6])\n"
+          ]
+        }
+      ]
     }
   ]
 }
